@@ -4,7 +4,6 @@ PORTNAME=	libilbc
 DISTVERSIONPREFIX=	v
 DISTVERSION=	2.0.2
 CATEGORIES=	net
-MASTER_SITES=	GHR
 
 MAINTAINER=	mva@FreeBSD.org
 COMMENT=	Internet Low Bit Rate codec (RFC3951)
