@@ -5,7 +5,6 @@ DISTVERSIONPREFIX=	V
 DISTVERSION=	4.3.1
 PORTREVISION=	1
 CATEGORIES=	security
-MASTER_SITES=	GHR
 
 MAINTAINER=	tijl@FreeBSD.org
 COMMENT=	GNU ZRTP library
